# backprop

./: .gitignore  CLAUDE.md  main.py  notebook.ipynb  pyproject.toml  readme.md
src/: __init__.py  activations.py  element.py  functions.py
tests/: test_backprop.py
