[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backprop"
version = "0.1.0"
description = "A simple backpropagation implementation."
readme = "CLAUDE.md"
requires-python = ">=3.7"
license = {text = "MIT"}

[tool.setuptools]
py-modules = ["element"]
package-dir = {"" = "src"}
